# Newtonic

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  actor.cpp  actor.h  assets.cpp  assets.h  behaviour.cpp  behaviour.h  camera.cpp  camera.h  color.h  common.cpp  common.h  engine.cpp  engine.h  input.cpp  input.h  main.cpp  material.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  mesh_shader.cpp  mesh_shader.h  message.cpp  message.h  message_bus.cpp  message_bus.h  message_typedefs.h  scene.cpp  scene.h  shader.cpp  shader.h  simple_camera_mover.cpp  (+3 more)
docs/html/: actor_8h_source.html  annotated.html  application_8h_source.html  assets_8h_source.html  behaviour_8h_source.html  camera_8h_source.html  cameraperspective_8h_source.html  classNewtonic_1_1Actor-members.html  classNewtonic_1_1Actor.html  classNewtonic_1_1Application-members.html  classNewtonic_1_1Application.html  classNewtonic_1_1Assets-members.html  classNewtonic_1_1Assets.html  classNewtonic_1_1Behaviour-members.html  classNewtonic_1_1Behaviour.html  classNewtonic_1_1Camera-members.html  classNewtonic_1_1Camera.html  classNewtonic_1_1Core-members.html  classNewtonic_1_1Core.html  classNewtonic_1_1Engine-members.html  classNewtonic_1_1Engine.html  classNewtonic_1_1Event-members.html  classNewtonic_1_1Event.html  classNewtonic_1_1EventBus-members.html  classNewtonic_1_1EventBus.html  classNewtonic_1_1Image-members.html  (+119 more)
newtonic/: CMakeLists.txt  Newtonic.h  NewtonicImGui.h
newtonic/include/: application.h  asset.h  assetcache.h  assetinstance.h  assetloader.h  assetloadinginformation.h  assetmanager.h  assetprovider.h  assetresourceinfo.h  core.h  event.h  input.h  json.h  keys.h  materialdefinition.h  materialinfo.h  math.h  serialization.h  timestep.h  transform.h  uniform.h  util.h  viewport.h  window.h
newtonic/include/gocs/: datacomponent.h  gameobject.h
newtonic/include/renderer/: cameraperspective.h  material.h  mesh.h  meshvertex.h  renderer.h  shader.h  texture.h
newtonic/src/: application.cpp  assetinstance.cpp  assetinstance.h  assetloader.cpp  assetmanager.cpp  assetmanager.h  assetresourceinfo.cpp  assetresourceinfo.h  camera.h  cameraperspective.h  core.cpp  event.cpp  event.h  eventbus.cpp  eventbus.h  image.cpp  image.h  indexbuffer.cpp  indexbuffer.h  input.cpp  input.h  keys.h  logger.cpp  logger.h  materialdefinition.cpp  materialinfo.cpp  materialinfo.h  math.h  opengl.h  renderer.cpp  renderer.h  serialization.h  shader.cpp  shader.h  texture.cpp  texture.h  timestep.cpp  transform.cpp  transform.h  uniform.cpp  (+9 more)
newtonic/src/gocs/: behaviour.h  component.cpp  component.h  gameobject.cpp  gameobject.h  renderjob.h  transformcomponent.h
newtonic/src/renderer/: camera.h  cameraperspective.cpp  indexbuffer.cpp  indexbuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  opengl.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.cpp  vertexbufferlayout.h
playground/: CMakeLists.txt
playground/src/: main.cpp
res/: flatcolorvert.glsl  frag.glsl  texturedfrag.glsl  texturedvert.glsl
shaders/: mesh.frag  mesh.vert
(+78 files in other folders)
